# docs/swagger/swagger.json
@@ -104,6 +104,60 @@
         }
       }
     },
+    "/directions/": {
+      "get": {
+        "summary": "Get directions",
+        "tags": [
+          "Service Route"
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully fetched directions",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "directions": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "station": {
+                            "type": "string",
+                            "description": "The station providing the directions"
+                          },
+                          "distance": {
+                            "type": "string",
+                            "description": "The distance to the destination"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error while fetching directions",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Une erreur est survenue lors de la récupération des directions."
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/users/{userId}": {
       "get": {
         "tags": [
@@ -551,6 +605,10 @@
     {
       "name": "Gas Api",
       "description": "Operations related to gas prices"
+    },
+    {
+      "name": "Service Route",
+      "description": "Get directions service"
     },
     {
       "name": "Users",
